fix: исправить ошибки согласно замечаниям ревьюера.