@@ -1,30 +1,24 @@
 package manager;
 
 import task.Task;
-
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final ArrayList<Task> history;
-
-    public InMemoryHistoryManager() {
-        history = new ArrayList<>();
-    }
 
     @Override
     public void add(Task task) {
         int maxSize = 10;
 
         if (task != null) {
-            history.add(task);
+            history.addLast(task);
         }
         if (history.size() > maxSize) {
-            history.remove(0);
+            history.removeFirst();
         }
     }
 
     @Override
-    public ArrayList<Task> getHistory() {
+    public LinkedList<Task> getHistory() {
         return history;
     }
 }
